# Face-Tracking-Maya

./: CMakeLists.txt  README.md
include/: FaceTracker.h
src/: FaceTracker.cpp  MayaSocket.cpp  Socket.cpp  main.cpp
